--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,28 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif;
-}
 
 :root {
     --primary-color: #FBFADA;
     --secondary-color:  #38794e;
     --hover-color: #1e5333;
+    --bg-gradient-start: #e7e48f;
+    --bg-gradient-end:white;
+    --font-primary: "Poppins", sans-serif;
+    --font-secundary: "segoe UI", Tahoma;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: var(--font-primary)
+}
+
+h1, h2, h3, h4, h5 {font-family: var(--font-secundary)}
+
+header img{
+    margin: 50px 20px;
 }
 
 header {
-    background-color: var(--primary-color);
-    background: linear-gradient( #e7e48f, #FBFADA,white); 
+    background: linear-gradient( var(--bg-gradient-start), var(--primary-color),var(--bg-gradient-end)); 
     padding: 0px 30px;   
     display: flex;
     align-items: center;
@@ -43,7 +53,7 @@ section {
 }
 
 main{
-    background: linear-gradient( white, #FBFADA, #e7e48f); 
+    background: linear-gradient( var(--bg-gradient-end), var(--primary-color), var(--bg-gradient-start)); 
 }
 
 #banner{
@@ -82,12 +92,6 @@ p{
 }
 #categories .card1, .card2, .card3,
 #products .card {
-    /* align-items: center;
-    text-align: center;
-    padding: 250px 20px;
-    border: 3px solid var(--primary-color);
-    box-shadow: 10px -4px 56px 4px rgba(219,199,84,0.46);
-    transition: 0.3s transform; */
     align-items: center;
     text-align: center;
     padding: 10px 20px;
@@ -135,29 +139,6 @@ p{
     text-align: center;
 }
 
-/* #products .container-grid-products{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 50px;
-    padding: 20px;
-    
-} */
-
-/* #products .card {
-    background-color: var(--primary-color);
-    align-items: center;
-    text-align: center;
-    padding: 10px 20px;
-    border: 3px solid var(--primary-color);
-    border-radius: 15px ;
-    box-shadow: 10px -4px 56px 4px rgba(219,199,84,0.46);
-    transition: 0.3s transform;
-}
- */
-/* #products .card:hover {
-    transform: scale(1.03);
-} */
-
 #products .card button {
     color: var(--primary-color);
     padding: 5px 10px;
@@ -172,12 +153,15 @@ p{
 
 form {
     background-color: var(--secondary-color);
-    width: 70%;
+    width: 50%;
     padding: 10px 30px;
     margin: auto;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 29px 52px 84px -55px rgba(0,0,0,0.83);
 }
-
 form * {
     display: block;
     margin: 10px 0px;
@@ -190,9 +174,11 @@ form button{
     color: var(--secondary-color);
     background-color: var(--primary-color);
     border: 2px solid var(--hover-color);
-    margin: auto;
+    margin: 20px;
     width: 25%;
     border-radius: 10px;
+    padding: 10px;
+    font-size: 15px;
 }
 
 form button:hover {
@@ -212,23 +198,45 @@ form button:hover {
     border-radius: 10px;
 }
 
-footer {
-    height: 200px;
+
+footer{
     background-color: var(--secondary-color);
     color: var(--primary-color);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:baseline ;
+    height: 100px;
     padding: 20px;
 }
 
-.contact-buttons {
-        display: flex;
-        flex-direction: column;
-        text-decoration: none;
-        color: var(--primary-color);
+footer h5{
+    margin: 10px
+
 }
 
+footer .contact-mail,
+footer .contact-telephone {
+    margin: 10px;
+}
+footer .contact-telephone a,
+footer .contact-mail a{
+    color: var(--primary-color);
+    text-decoration: none;
+}
 
+.btn-wsp {
+    position: fixed;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    bottom: 30px;
+    right: 30px;
+    background: #0df053;
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 0px 1px 10px rgba (0,0,0,0.3);
+}
 
+.btn-wsp:hover {
+    background: #fff;
+    color: #0df053;
+}
